--- a/prestamoController/prestamoController/prestamoController.csproj
+++ b/prestamoController/prestamoController/prestamoController.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MahApps.Metro">
-      <HintPath>..\..\..\..\..\Desktop\Ultimo\CIOETsketch1\packages\MahApps.Metro.0.14.0.0\lib\net45\MahApps.Metro.dll</HintPath>
+      <HintPath>..\..\..\..\..\Downloads\MahApps.Metro.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
