--- a/SistemaControlDeCobranzas/CapaModelo/CapaModelo.csproj
+++ b/SistemaControlDeCobranzas/CapaModelo/CapaModelo.csproj
@@ -53,11 +53,11 @@
       <DependentUpon>ModeloDB.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PruebaQuery.cs" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="ModeloDB.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>ModeloDB.Designer.cs</LastGenOutput>
     </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
@@ -66,9 +66,13 @@
       <DependentUpon>ModeloDB.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\usuario.datasource" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ModeloDB.edmx.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
