--- a/SistemaControlDeCobranzas/capaVista/capaVista.csproj
+++ b/SistemaControlDeCobranzas/capaVista/capaVista.csproj
@@ -37,21 +37,8 @@
     <Reference Include="MahApps.Metro">
       <HintPath>..\..\..\..\..\Documents\Visual Studio 2013\Projects\TesisApplication2\packages\MahApps.Metro.1.1.2.0\lib\net45\MahApps.Metro.dll</HintPath>
     </Reference>
-    <Reference Include="MahApps.Metro.0.14.0.0.Fakes">
-      <HintPath>FakesAssemblies\MahApps.Metro.0.14.0.0.Fakes.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=11.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.Windows.Shell, Version=3.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Microsoft Ribbon for WPF\V3.5\Microsoft.Windows.Shell.dll</HintPath>
-    </Reference>
-    <Reference Include="RibbonControlsLibrary, Version=4.0.0.11019, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Microsoft Ribbon for WPF\V3.5\RibbonControlsLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="RibbonControlsLibrary.Fakes">
-      <HintPath>FakesAssemblies\RibbonControlsLibrary.Fakes.dll</HintPath>
-    </Reference>
+    <Reference Include="Microsoft.Windows.Shell, Version=3.5.41019.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="RibbonControlsLibrary, Version=4.0.0.11019, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -114,12 +101,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Fakes Include="Fakes\RibbonControlsLibrary.fakes">
-      <SubType>Designer</SubType>
-    </Fakes>
-    <Fakes Include="Fakes\MahApps.Metro.fakes">
-      <SubType>Designer</SubType>
-    </Fakes>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
