--- a/SistemaControlDeCobranzas/packages/repositories.config
+++ b/SistemaControlDeCobranzas/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Capa_negocio\packages.config" />
   <repository path="..\CapaModelo\packages.config" />
   <repository path="..\capaVista\packages.config" />
 </repositories>
