--- a/SistemaControlDeCobranzas/CapaModelo/App.Config
+++ b/SistemaControlDeCobranzas/CapaModelo/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="dbControlCobranzasEntities" connectionString="metadata=res://*/ModeloDB.csdl|res://*/ModeloDB.ssdl|res://*/ModeloDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLSERVERLOCAL;initial catalog=dbControlCobranzas;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="dbControlCobranzasEntities" connectionString="metadata=res://*/ModeloDB.csdl|res://*/ModeloDB.ssdl|res://*/ModeloDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=dbControlCobranzas;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
