--- a/SistemaControlDeCobranzas/packages/repositories.config
+++ b/SistemaControlDeCobranzas/packages/repositories.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\..\..\..\Downloads\MahApps.Metro-master\samples\MetroDemo\packages.config" />
   <repository path="..\Capa_negocio\packages.config" />
   <repository path="..\CapaModelo\packages.config" />
   <repository path="..\capaVista\packages.config" />
+  <repository path="..\MahApps.Metro.Application1\packages.config" />
 </repositories>
