--- a/SistemaControlDeCobranzas/capaVista/packages.config
+++ b/SistemaControlDeCobranzas/capaVista/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Fluent.Ribbon" version="3.4.2.173" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net45" />
+  <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net45" />
   <package id="RibbonControlsLibrary" version="4.0.0" targetFramework="net45" />
 </packages>
